[workspace]
resolver = "2"
members = [
    "programs/grave-scanner",
    "programs/grave-vault",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# MSRV pin: matches rust-toolchain.toml and Solana 2.0.x BPF compilation.
# Cargo 1.84+ uses this for MSRV-aware dependency resolution; on Cargo 1.79
# this is informational and the lockfile drives compatibility.
rust-version = "1.79"
license = "Apache-2.0"
authors = ["GraveYield Protocol contributors"]
repository = "https://github.com/graveyieldprotocol/protocol"
homepage = "https://graveyield.xyz"
readme = "README.md"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"

# cargo-build-sbf reads this to pick the platform-tools version for the
# BPF compile. v2.2.18's default is v1.48 (cargo 1.84), which can't parse
# the edition2024 manifests pulled in transitively by anchor-lang 0.31.1.
# v1.54 (2026-03-06) ships cargo 1.85+, which is the first BPF toolchain
# that handles edition2024 cleanly.
[workspace.metadata.solana]
tools-version = "v1.54"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
