[workspace]
resolver = "2"
members = [
    "programs/grave-scanner",
    "programs/grave-vault",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
# Aligned with the official Solana 3.x stack (rust 1.91.1 per
# https://solana.com/docs/intro/installation). Cargo's MSRV-aware resolver
# uses this when resolving dep versions.
rust-version = "1.91"
license = "Apache-2.0"
authors = ["GraveYield Protocol contributors"]
repository = "https://github.com/GraveYield-Protocol/protocol"
homepage = "https://graveyield.xyz"
readme = "README.md"

[workspace.dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"

# cargo-build-sbf reads this to pick the platform-tools version for the
# BPF compile. v1.54 (2026-03-06) ships cargo 1.85+, the first BPF
# toolchain that handles edition2024 manifests. Solana 3.0.10 + Anchor
# 0.32.1 still default to older platform-tools (cargo 1.84) so the
# explicit pin remains the source of truth for our reproducible build.
[workspace.metadata.solana]
tools-version = "v1.54"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3
debug = false

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
