[package]
name = "grave-scanner"
description = "GraveScanner: on-chain eligibility evaluation and two-phase certification for derelict pools."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "grave_scanner"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }
