[package]
name = "grave-scanner"
description = "GraveScanner: on-chain eligibility evaluation and two-phase certification for derelict pools."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "grave_scanner"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
# Anchor 0.31.x's `#[program]` macro emits `#[cfg(feature = "anchor-debug")]`
# tags. Declaring the feature here silences the unexpected_cfgs lint on
# Rust 1.80+. The feature is a no-op flag the macro author uses internally.
anchor-debug = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl  = { workspace = true }
