[package]
name = "grave-vault"
description = "GraveVault: settlement program. Executes salvages, distributes proceeds 40/40/20, and serves claims."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "grave_vault"

[features]
default = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build",
    "grave-scanner/idl-build",
]
# Anchor 0.31.x's `#[program]` macro emits `#[cfg(feature = "anchor-debug")]`
# tags. Declaring the feature here silences the unexpected_cfgs lint on
# Rust 1.80+. The feature is a no-op flag the macro author uses internally.
anchor-debug = []

[dependencies]
# `init-if-needed` is required for the lp_holder_pool_vault SystemAccount
# in `salvage_pool` — first salvage of a pool creates the system-owned
# 0-data PDA; subsequent salvages of the same pool are gated upstream by
# the `pool_registry` init constraint, so init_if_needed only matters on
# the first call. The Anchor footgun (init_if_needed silently accepting
# an unexpected pre-existing account with mismatched layout) does not
# apply here because SystemAccount<'info> + space=0 + system-owner is a
# total enumeration — any pre-existing account that doesn't match those
# bounds fails the type check.
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl  = { workspace = true }
grave-scanner = { path = "../grave-scanner", features = ["cpi"] }
